# JSONion

./: README.md  builder.py  requirements.txt
examples/: example.json  example2.json
language_plugins/: __init__.py  base_language_plugin.py  base_snippets.py  command_definitions.py  csharp_language_plugin.py  python_language_plugin.py
language_plugins/cplusplus/: cplusplus_language_plugin.py  cplusplus_snippets.py
language_plugins/cplusplus/static_files/: CMakeLists.txt  base-command.hpp
language_plugins/csharp/: csharp_language_plugin.py  csharp_snippets.py
language_plugins/csharp/static_files/: BaseCommand.cs
language_plugins/javascript/: javascript_language_plugin.py  javascript_snippets.py
language_plugins/javascript/static_files/: BaseCommand.js
language_plugins/python/: python_language_plugin.py  python_snippets.py
language_plugins/python/static_files/: base_command.py
tests/: conftest.py  test_codegen.py
tests/fixtures/expected/cplusplus/: example_commands.hpp
tests/fixtures/expected/csharp/: example_commands.cs
tests/fixtures/expected/javascript/: example_commands.js
tests/fixtures/expected/python/: example_commands.py
tests/fixtures/input/: example_commands.json
